// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link Default 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-dtDOqo braPyZ fNTFAP"
  >
    <div
      className="sc-crHmcD dgzXGK"
    >
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb fndmZX kgdNVF u-text--large"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Blockchain
        </a>
      </span>
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb fndmZX kgdNVF u-text--large"
          disabled={true}
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Blockchain
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link Sizing 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-dtDOqo braPyZ fNTFAP"
  >
    <div
      className="sc-crHmcD dgzXGK"
    >
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb fndmZX kgdNVF u-text--large"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Large
        </a>
      </span>
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb dBtlpJ kgdNVF"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Regular
        </a>
      </span>
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb dlbOXI kgdNVF u-text--small"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Small
        </a>
      </span>
      <span>
        <a
          appearance="default"
          className="sc-cTAqQK sc-dPiLbb fSvsbp kgdNVF u-text--xsmall"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          XS Small
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link System 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <div
    className="sc-bdvvtL sc-dtDOqo braPyZ fNTFAP"
  >
    <div
      className="sc-crHmcD dgzXGK"
    >
      <span>
        <a
          appearance="system"
          className="sc-cTAqQK sc-jObWnj dBtlpJ etnEz u-text--medium"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          Blockchain
        </a>
      </span>
      <span>
        <a
          appearance="system"
          className="sc-cTAqQK sc-jObWnj fSvsbp etnEz u-text--xsmall"
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          <svg
            id="/assets/icons/link.svg"
          />
          /lotus/miner
        </a>
      </span>
      <span>
        <a
          appearance="system"
          className="sc-cTAqQK sc-jObWnj fSvsbp etnEz u-text--xsmall"
          disabled={true}
          href="/http://filecoin-fe-dev.s3-website.us-east-2.amazonaws.com/"
          onClick={[Function]}
          target="blank"
        >
          <svg
            id="/assets/icons/link.svg"
          />
          /lotus/miner
        </a>
      </span>
    </div>
  </div>
</div>
`;
